# icarus

./: CMakeLists.txt  README.md
include/icarus/: camera.hpp  hit.hpp  image.hpp  material.hpp  ray.hpp  sphere.hpp  triangle.hpp  vector.hpp
src/: main.cxx
src/icarus/: camera.cxx  hit.cxx  image.cxx  material.cxx  ray.cxx  sphere.cxx  triangle.cxx  vector.cxx
